# CoopIHC

./: .buildinfo  .docblock.json  .gitignore  .notes.txt  CONTRIBUTING.md  LICENSE  Pipfile  README.md  _tmp.txt  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py  tmp.txt  worksheet.py
.doctrees/: api.doctree  environment.pickle  index.doctree
_autosummary/: coopihc.agents.BaseAgent.BaseAgent.html  coopihc.agents.BaseAgent.html  coopihc.agents.ExampleAssistant.CoordinatedAssistant.html  coopihc.agents.ExampleAssistant.CoordinatedAssistantWithInference.html  coopihc.agents.ExampleAssistant.CoordinatedAssistantWithRollout.html  coopihc.agents.ExampleAssistant.ExampleAssistant.html  coopihc.agents.ExampleAssistant.html  coopihc.agents.ExampleUser.ExampleUser.html  coopihc.agents.ExampleUser.PseudoRandomUser.html  coopihc.agents.ExampleUser.PseudoRandomUserWithParams.html  coopihc.agents.ExampleUser.html  coopihc.agents.html  coopihc.agents.lqrcontrollers.FHDT_LQRController.FHDT_LQRController.html  coopihc.agents.lqrcontrollers.FHDT_LQRController.html  coopihc.agents.lqrcontrollers.IHCT_LQGController.IHCT_LQGController.html  coopihc.agents.lqrcontrollers.IHCT_LQGController.html  coopihc.agents.lqrcontrollers.IHDT_LQRController.IHDT_LQRController.html  coopihc.agents.lqrcontrollers.IHDT_LQRController.html  coopihc.agents.lqrcontrollers.LQRController.LQRController.html  coopihc.agents.lqrcontrollers.LQRController.html  coopihc.agents.lqrcontrollers.html  coopihc.base.Space.BaseSpace.html  coopihc.base.Space.CatSet.html  coopihc.base.Space.Numeric.html  coopihc.base.Space.Space.html  coopihc.base.Space.html  coopihc.base.State.State.html  coopihc.base.State.html  coopihc.base.StateElement.StateElement.html  coopihc.base.StateElement.html  coopihc.base.elements.array_element.html  coopihc.base.elements.box_space.html  coopihc.base.elements.cat_element.html  coopihc.base.elements.discrete_array_element.html  coopihc.base.elements.example_game_state.html  coopihc.base.elements.html  coopihc.base.elements.integer_set.html  coopihc.base.elements.integer_space.html  coopihc.base.html  coopihc.base.utils.html  (+84 more)
_modules/: index.html
_sources/: index.rst.txt
bandit/: agents.py  assistants.py  bundle.py  envs.py  inference.py  model_checks.py  model_checks_v2.py  operators.py  questions.md
benchmarks/: benchmark_bundle_performance.py
coopihc/: __init__.py  agents.py  check_env.py  helpers.py  inference.py  interactiontask.py  models.py  observation.py  policy.py  space.py  wsbundle.py
core/: agents.py  bundle.py  check_env.py  core.py  helpers.py  inference.py  interactiontask.py  models.py  observation.py  policy.py  space.py  wsbundle.py
docs/: api.rst  (+5 more)
(+601 files in other folders)
