[tool.poetry]
name = "coopihc"
version = "0.0.1"
description = "Two-agent component-based interaction environments for computational HCI with Python"
authors = ["Julien Gori"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
tabulate = '*'
numpy = '^1'
matplotlib ='^3'
scipy = '^1.7.3'
gym = "^0.17"
PyYAML = "^6.0"
websockets = "^10.1"
stable-baselines3 = "^1.3.0"
pytest-timeout = "^2.0.2"




[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
secondary = true


[tool.poetry.dev-dependencies]
Sphinx = '^4.3'
sphinx-rtd-theme= '^1'
sphinxcontrib-tikz = "^0.4.15"
twine = "^3.7.0"
pytest = "^6.2.5"
black = {version = "^21.12b0", allow-prereleases = true}
setuptools = "^59.6.0"
pytest-benchmark = "^3.4.1"


[build-system]
requires = ["poetry-core>=1.0.0", "setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "poetry.core.masonry.api"
