[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coopihc"
version = "0.0.2"
description = "Two-agent component-based interaction environments for computational HCI with Python"
authors = [{name = "Julien Gori"}]
requires-python = ">=3.8,<3.13"

dependencies = [
  "PyYAML>=6.0,<7.0",
  "gymnasium[rl]>=1.1.1",
  "matplotlib>=3,<4",
  "numpy>=1,<2",
  "pettingzoo[rl]>=1.24.3",
  "pytest-timeout>=2.0.2,<3",
  "scipy>=1.7.3,<2",
  "tabulate",
  "websockets>=10.1,<11",
]

[project.optional-dependencies]
rl = [
  "stable-baselines3>=1.3.0,<2.0.0",
  "gym>=0.17,<0.18",
  "tensorboard>=2.8.0,<3"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["coopihc*"]

[tool.setuptools.package-data]
"*" = ["*"]
